tests/sksl/errors/golden/ArrayIndexOutOfRange.glsl
### Compilation failed:

error: 1: index -1 out of range for 'int[123]'
error: 4: index 123 out of range for 'half4x4[123]'
error: 5: index 1000000000 out of range for 'int4[123]'
error: 6: index -1294967296 out of range for 'half3[123]'
error: 8: index -1 out of range for 'half4'
error: 13: index 4 out of range for 'half4'
error: 14: index 1000000000 out of range for 'half4'
error: 16: index -1 out of range for 'half3'
error: 20: index 3 out of range for 'half3'
error: 21: index 4 out of range for 'half3'
error: 22: index 1000000000 out of range for 'half3'
error: 24: index -1 out of range for 'half2'
error: 27: index 2 out of range for 'half2'
error: 28: index 3 out of range for 'half2'
error: 29: index 4 out of range for 'half2'
error: 30: index 1000000000 out of range for 'half2'
error: 32: index -1 out of range for 'half2x4'
error: 35: index 2 out of range for 'half2x4'
error: 36: index 3 out of range for 'half2x4'
error: 37: index 4 out of range for 'half2x4'
error: 38: index 1000000000 out of range for 'half2x4'
error: 40: index -1 out of range for 'half3x3'
error: 44: index 3 out of range for 'half3x3'
error: 45: index 4 out of range for 'half3x3'
error: 46: index 1000000000 out of range for 'half3x3'
error: 48: index -1 out of range for 'half4x2'
error: 53: index 4 out of range for 'half4x2'
error: 54: index 1000000000 out of range for 'half4x2'
28 errors
